Added moving message

--- a/README
+++ b/README
@@ -1,61 +1,2 @@
-LEP
-===
-
-LEP is a home automation system for GNU/Linux.
-LEP also provides music control through VLC.
-LEP is secure (AES 128 bit) and distributed (ctsocket library).
-LEP currently interfaces with an Arduino over USB. Support for the ESP2866 is expected soon.
-This is the C++ LEP server, as well as speech, text, and GUI interfaces.
-An Android app is being developed.
-Example config files are provided, these will be better documented soon.
-
-Current Issues:
-==============
-
-Speech recognition is not very accurate
-
-Installation:
-============
-
-Once dependencies are installed:
-
-mkdir build
-cd build
-cmake ..
-make
-mv src/lep ../
-
-At the moment, config files should be stored in the same directory as the LEP executable.
-You will probably have to generate a new PocketSphinx language model, or download the default one.
-
-Running:
-=======
-
-./lep [config file]
-
-Example config files are included, please change the AES key and password
-
-Dependencies:
-============
-SphinxBase and PocketSphinx (http://cmusphinx.sourceforge.net/)
-espeak (with development files) (http://espeak.sourceforge.net/)
-VLC (videolan.org)
-	LEP uses VLC's remote control function on port 12515 (configurable) for music control
-
-
-
-  Copyright 2017 Carter Turnbaugh
-
-  LEP is free software: you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation, either version 3 of the License, or
-  (at your option) any later version.
-
-  LEP is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
-
-  You should have received a copy of the GNU General Public License
-  along with LEP.  If not, see <http://www.gnu.org/licenses/>.
-
+THIS REPOSITORY IS DEPRECATED.
+THE NEW VERSION CAN BE FOUND AT https://gitlab.com/carterturn/lep10
